# aoc

./: .gitignore  README.md  all_days.sh  day_template.py  generate_readme.py  new_day.sh
2015/: day1.py  (+23 more)
rust/: Cargo.toml  all_days.sh  new_day.sh  one_day.sh  update.sh
rust/day1/src/: main.rs
rust/src/2015/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/2015/day1/: main.rs
rust/src/2015/day10/: main.rs
rust/src/2015/day11/: main.rs
rust/src/2015/day12/: main.rs
rust/src/2015/day13/: main.rs
rust/src/2015/day14/: main.rs
rust/src/2015/day15/: main.rs
rust/src/2015/day16/: main.rs
rust/src/2015/day17/: main.rs
rust/src/2015/day18/: main.rs
rust/src/2015/day19/: main.rs
rust/src/2015/day2/: main.rs
rust/src/2015/day20/: main.rs
rust/src/2015/day21/: main.rs
rust/src/2015/day22/: main.rs
rust/src/2015/day23/: main.rs
rust/src/2015/day24/: main.rs
rust/src/2015/day25/: main.rs
rust/src/2015/day3/: main.rs
rust/src/2015/day4/: main.rs
rust/src/2015/day5/: main.rs
rust/src/2015/day6/: main.rs
rust/src/2015/day7/: main.rs
rust/src/2015/day8/: main.rs
rust/src/2015/day9/: main.rs
rust/src/2016/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/2016/day1/: main.rs
rust/src/2016/day10/: main.rs
rust/src/2016/day11/: main.rs
rust/src/2016/day12/: main.rs
rust/src/2016/day13/: main.rs
rust/src/2016/day14/: main.rs
rust/src/2016/day15/: main.rs
rust/src/2016/day16/: main.rs
rust/src/2016/day17/: main.rs
rust/src/2016/day18/: main.rs
rust/src/2016/day19/: main.rs
rust/src/2016/day2/: main.rs
rust/src/2016/day20/: main.rs
rust/src/2016/day21/: main.rs
rust/src/2016/day22/: main.rs
rust/src/2016/day23/: main.rs
rust/src/2016/day24/: main.rs
rust/src/2016/day25/: main.rs
rust/src/2016/day3/: main.rs
rust/src/2016/day4/: main.rs
rust/src/2016/day5/: main.rs
rust/src/2016/day6/: main.rs
rust/src/2016/day7/: main.rs
rust/src/2016/day8/: main.rs
rust/src/2016/day9/: main.rs
rust/src/2017/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/2017/day1/: main.rs
rust/src/2017/day10/: main.rs
rust/src/2017/day11/: main.rs
rust/src/2017/day12/: main.rs
rust/src/2017/day13/: main.rs
rust/src/2017/day14/: main.rs
rust/src/2017/day15/: main.rs
rust/src/2017/day16/: main.rs
rust/src/2017/day17/: main.rs
rust/src/2017/day18/: main.rs
rust/src/2017/day19/: main.rs
rust/src/2017/day2/: main.rs
rust/src/2017/day20/: main.rs
rust/src/2017/day21/: main.rs
rust/src/2017/day22/: main.rs
rust/src/2017/day23/: main.rs
rust/src/2017/day24/: main.rs
rust/src/2017/day25/: main.rs
rust/src/2017/day3/: main.rs
rust/src/2017/day4/: main.rs
rust/src/2017/day5/: main.rs
rust/src/2017/day6/: main.rs
rust/src/2017/day7/: main.rs
rust/src/2017/day8/: main.rs
rust/src/2017/day9/: main.rs
rust/src/2018/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/2018/day1/: main.rs
rust/src/2018/day10/: main.rs
rust/src/2018/day11/: main.rs
rust/src/2018/day12/: main.rs
rust/src/2018/day13/: main.rs
rust/src/2018/day14/: main.rs
rust/src/2018/day15/: main.rs
rust/src/2018/day16/: main.rs
rust/src/2018/day17/: main.rs
rust/src/2018/day18/: main.rs
rust/src/2018/day19/: main.rs
rust/src/2018/day2/: main.rs
rust/src/2018/day20/: main.rs
rust/src/2018/day21/: main.rs
rust/src/2018/day22/: main.rs
rust/src/2018/day23/: main.rs
rust/src/2018/day24/: main.rs
rust/src/2018/day25/: main.rs
rust/src/2019/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/2020/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/2021/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/2025/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
rust/src/lib/: common.rs
rust/src/template/: main.rs
rust/src/templates/: template_multi_line.rs  template_one_line.rs  template_regex.rs
(+944 files in other folders)
