[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
description = "My solutions for Advent of Code in Rust"
repository = "https://github.com/SylvainDe/aoc"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["aoc", "adventofcode", "advent of code"]
categories = ["games"]

[lib]
name = "common"
path = "src/lib/common.rs"

[[bin]]
name = "template"
path = "src/template/main.rs"

[[bin]]
name = "day1_2021"
path = "src/2021/day1/main.rs"

[[bin]]
name = "day2_2021"
path = "src/2021/day2/main.rs"

[[bin]]
name = "day4_2021"
path = "src/2021/day4/main.rs"

[[bin]]
name = "day5_2021"
path = "src/2021/day5/main.rs"

[[bin]]
name = "day6_2021"
path = "src/2021/day6/main.rs"

[[bin]]
name = "day7_2021"
path = "src/2021/day7/main.rs"

[[bin]]
name = "day8_2021"
path = "src/2021/day8/main.rs"

[[bin]]
name = "day10_2021"
path = "src/2021/day10/main.rs"

[[bin]]
name = "day1_2018"
path = "src/2018/day1/main.rs"

[[bin]]
name = "day2_2018"
path = "src/2018/day2/main.rs"

[[bin]]
name = "day4_2018"
path = "src/2018/day4/main.rs"

[[bin]]
name = "day5_2018"
path = "src/2018/day5/main.rs"

[[bin]]
name = "day6_2018"
path = "src/2018/day6/main.rs"

[[bin]]
name = "day8_2018"
path = "src/2018/day8/main.rs"

[[bin]]
name = "day1_2015"
path = "src/2015/day1/main.rs"

[[bin]]
name = "day2_2015"
path = "src/2015/day2/main.rs"

[[bin]]
name = "day3_2015"
path = "src/2015/day3/main.rs"

[[bin]]
name = "day4_2015"
path = "src/2015/day4/main.rs"

[[bin]]
name = "day9_2018"
path = "src/2018/day9/main.rs"

[[bin]]
name = "day10_2018"
path = "src/2018/day10/main.rs"

[[bin]]
name = "day3_2018"
path = "src/2018/day3/main.rs"

[[bin]]
name = "day1_2016"
path = "src/2016/day1/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
md5 = "0.7.0"
regex = "1"
lazy_static = "1.4.0"
