[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
description = "My solutions for Advent of Code in Rust"
repository = "https://github.com/SylvainDe/aoc"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["aoc", "adventofcode", "advent of code"]
categories = ["games"]

# Common parts
[lib]
name = "common"
path = "src/lib/common.rs"

[[bin]]
name = "template"
path = "src/template/main.rs"

# 2015
[[bin]]
name = "day1_2015"
path = "src/2015/day1/main.rs"

[[bin]]
name = "day2_2015"
path = "src/2015/day2/main.rs"

[[bin]]
name = "day3_2015"
path = "src/2015/day3/main.rs"

[[bin]]
name = "day4_2015"
path = "src/2015/day4/main.rs"

[[bin]]
name = "day5_2015"
path = "src/2015/day5/main.rs"

[[bin]]
name = "day6_2015"
path = "src/2015/day6/main.rs"

[[bin]]
name = "day7_2015"
path = "src/2015/day7/main.rs"

[[bin]]
name = "day8_2015"
path = "src/2015/day8/main.rs"

[[bin]]
name = "day9_2015"
path = "src/2015/day9/main.rs"

[[bin]]
name = "day10_2015"
path = "src/2015/day10/main.rs"

[[bin]]
name = "day11_2015"
path = "src/2015/day11/main.rs"

[[bin]]
name = "day12_2015"
path = "src/2015/day12/main.rs"

[[bin]]
name = "day13_2015"
path = "src/2015/day13/main.rs"

[[bin]]
name = "day14_2015"
path = "src/2015/day14/main.rs"

[[bin]]
name = "day15_2015"
path = "src/2015/day15/main.rs"

[[bin]]
name = "day16_2015"
path = "src/2015/day16/main.rs"

[[bin]]
name = "day17_2015"
path = "src/2015/day17/main.rs"

[[bin]]
name = "day18_2015"
path = "src/2015/day18/main.rs"

[[bin]]
name = "day19_2015"
path = "src/2015/day19/main.rs"

[[bin]]
name = "day20_2015"
path = "src/2015/day20/main.rs"

[[bin]]
name = "day21_2015"
path = "src/2015/day21/main.rs"

[[bin]]
name = "day22_2015"
path = "src/2015/day22/main.rs"

[[bin]]
name = "day23_2015"
path = "src/2015/day23/main.rs"

[[bin]]
name = "day24_2015"
path = "src/2015/day24/main.rs"

[[bin]]
name = "day25_2015"
path = "src/2015/day25/main.rs"

# 2016
[[bin]]
name = "day1_2016"
path = "src/2016/day1/main.rs"

[[bin]]
name = "day2_2016"
path = "src/2016/day2/main.rs"

[[bin]]
name = "day3_2016"
path = "src/2016/day3/main.rs"

[[bin]]
name = "day4_2016"
path = "src/2016/day4/main.rs"

[[bin]]
name = "day5_2016"
path = "src/2016/day5/main.rs"

[[bin]]
name = "day6_2016"
path = "src/2016/day6/main.rs"

[[bin]]
name = "day7_2016"
path = "src/2016/day7/main.rs"

[[bin]]
name = "day8_2016"
path = "src/2016/day8/main.rs"

[[bin]]
name = "day9_2016"
path = "src/2016/day9/main.rs"

[[bin]]
name = "day10_2016"
path = "src/2016/day10/main.rs"

[[bin]]
name = "day11_2016"
path = "src/2016/day11/main.rs"

[[bin]]
name = "day12_2016"
path = "src/2016/day12/main.rs"

[[bin]]
name = "day13_2016"
path = "src/2016/day13/main.rs"

[[bin]]
name = "day14_2016"
path = "src/2016/day14/main.rs"

[[bin]]
name = "day15_2016"
path = "src/2016/day15/main.rs"

[[bin]]
name = "day16_2016"
path = "src/2016/day16/main.rs"

[[bin]]
name = "day17_2016"
path = "src/2016/day17/main.rs"

[[bin]]
name = "day18_2016"
path = "src/2016/day18/main.rs"

[[bin]]
name = "day19_2016"
path = "src/2016/day19/main.rs"

[[bin]]
name = "day20_2016"
path = "src/2016/day20/main.rs"

[[bin]]
name = "day21_2016"
path = "src/2016/day21/main.rs"

[[bin]]
name = "day22_2016"
path = "src/2016/day22/main.rs"

[[bin]]
name = "day23_2016"
path = "src/2016/day23/main.rs"

[[bin]]
name = "day24_2016"
path = "src/2016/day24/main.rs"

[[bin]]
name = "day25_2016"
path = "src/2016/day25/main.rs"

# 2017
[[bin]]
name = "day1_2017"
path = "src/2017/day1/main.rs"

[[bin]]
name = "day2_2017"
path = "src/2017/day2/main.rs"

[[bin]]
name = "day3_2017"
path = "src/2017/day3/main.rs"

[[bin]]
name = "day4_2017"
path = "src/2017/day4/main.rs"

[[bin]]
name = "day5_2017"
path = "src/2017/day5/main.rs"

[[bin]]
name = "day6_2017"
path = "src/2017/day6/main.rs"

[[bin]]
name = "day7_2017"
path = "src/2017/day7/main.rs"

[[bin]]
name = "day8_2017"
path = "src/2017/day8/main.rs"

[[bin]]
name = "day9_2017"
path = "src/2017/day9/main.rs"

[[bin]]
name = "day10_2017"
path = "src/2017/day10/main.rs"

[[bin]]
name = "day11_2017"
path = "src/2017/day11/main.rs"

[[bin]]
name = "day12_2017"
path = "src/2017/day12/main.rs"

[[bin]]
name = "day13_2017"
path = "src/2017/day13/main.rs"

[[bin]]
name = "day14_2017"
path = "src/2017/day14/main.rs"

[[bin]]
name = "day15_2017"
path = "src/2017/day15/main.rs"

[[bin]]
name = "day16_2017"
path = "src/2017/day16/main.rs"

[[bin]]
name = "day17_2017"
path = "src/2017/day17/main.rs"

[[bin]]
name = "day18_2017"
path = "src/2017/day18/main.rs"

[[bin]]
name = "day19_2017"
path = "src/2017/day19/main.rs"

[[bin]]
name = "day20_2017"
path = "src/2017/day20/main.rs"

[[bin]]
name = "day21_2017"
path = "src/2017/day21/main.rs"

[[bin]]
name = "day22_2017"
path = "src/2017/day22/main.rs"

[[bin]]
name = "day23_2017"
path = "src/2017/day23/main.rs"

[[bin]]
name = "day24_2017"
path = "src/2017/day24/main.rs"

[[bin]]
name = "day25_2017"
path = "src/2017/day25/main.rs"

# 2018
[[bin]]
name = "day1_2018"
path = "src/2018/day1/main.rs"

[[bin]]
name = "day2_2018"
path = "src/2018/day2/main.rs"

[[bin]]
name = "day3_2018"
path = "src/2018/day3/main.rs"

[[bin]]
name = "day4_2018"
path = "src/2018/day4/main.rs"

[[bin]]
name = "day5_2018"
path = "src/2018/day5/main.rs"

[[bin]]
name = "day6_2018"
path = "src/2018/day6/main.rs"

[[bin]]
name = "day7_2018"
path = "src/2018/day7/main.rs"

[[bin]]
name = "day8_2018"
path = "src/2018/day8/main.rs"

[[bin]]
name = "day9_2018"
path = "src/2018/day9/main.rs"

[[bin]]
name = "day10_2018"
path = "src/2018/day10/main.rs"

[[bin]]
name = "day11_2018"
path = "src/2018/day11/main.rs"

[[bin]]
name = "day12_2018"
path = "src/2018/day12/main.rs"

[[bin]]
name = "day13_2018"
path = "src/2018/day13/main.rs"

[[bin]]
name = "day14_2018"
path = "src/2018/day14/main.rs"

[[bin]]
name = "day15_2018"
path = "src/2018/day15/main.rs"

[[bin]]
name = "day16_2018"
path = "src/2018/day16/main.rs"

[[bin]]
name = "day17_2018"
path = "src/2018/day17/main.rs"

[[bin]]
name = "day18_2018"
path = "src/2018/day18/main.rs"

[[bin]]
name = "day19_2018"
path = "src/2018/day19/main.rs"

[[bin]]
name = "day20_2018"
path = "src/2018/day20/main.rs"

[[bin]]
name = "day21_2018"
path = "src/2018/day21/main.rs"

[[bin]]
name = "day22_2018"
path = "src/2018/day22/main.rs"

[[bin]]
name = "day23_2018"
path = "src/2018/day23/main.rs"

[[bin]]
name = "day24_2018"
path = "src/2018/day24/main.rs"

[[bin]]
name = "day25_2018"
path = "src/2018/day25/main.rs"

# 2019
[[bin]]
name = "day1_2019"
path = "src/2019/day1/main.rs"

[[bin]]
name = "day2_2019"
path = "src/2019/day2/main.rs"

[[bin]]
name = "day3_2019"
path = "src/2019/day3/main.rs"

[[bin]]
name = "day4_2019"
path = "src/2019/day4/main.rs"

[[bin]]
name = "day5_2019"
path = "src/2019/day5/main.rs"

[[bin]]
name = "day6_2019"
path = "src/2019/day6/main.rs"

[[bin]]
name = "day7_2019"
path = "src/2019/day7/main.rs"

[[bin]]
name = "day8_2019"
path = "src/2019/day8/main.rs"

[[bin]]
name = "day9_2019"
path = "src/2019/day9/main.rs"

[[bin]]
name = "day10_2019"
path = "src/2019/day10/main.rs"

[[bin]]
name = "day11_2019"
path = "src/2019/day11/main.rs"

[[bin]]
name = "day12_2019"
path = "src/2019/day12/main.rs"

[[bin]]
name = "day13_2019"
path = "src/2019/day13/main.rs"

[[bin]]
name = "day14_2019"
path = "src/2019/day14/main.rs"

[[bin]]
name = "day15_2019"
path = "src/2019/day15/main.rs"

[[bin]]
name = "day16_2019"
path = "src/2019/day16/main.rs"

[[bin]]
name = "day17_2019"
path = "src/2019/day17/main.rs"

[[bin]]
name = "day18_2019"
path = "src/2019/day18/main.rs"

[[bin]]
name = "day19_2019"
path = "src/2019/day19/main.rs"

[[bin]]
name = "day20_2019"
path = "src/2019/day20/main.rs"

[[bin]]
name = "day21_2019"
path = "src/2019/day21/main.rs"

[[bin]]
name = "day22_2019"
path = "src/2019/day22/main.rs"

[[bin]]
name = "day23_2019"
path = "src/2019/day23/main.rs"

[[bin]]
name = "day24_2019"
path = "src/2019/day24/main.rs"

[[bin]]
name = "day25_2019"
path = "src/2019/day25/main.rs"

# 2020
[[bin]]
name = "day1_2020"
path = "src/2020/day1/main.rs"

[[bin]]
name = "day2_2020"
path = "src/2020/day2/main.rs"

[[bin]]
name = "day3_2020"
path = "src/2020/day3/main.rs"

[[bin]]
name = "day4_2020"
path = "src/2020/day4/main.rs"

[[bin]]
name = "day5_2020"
path = "src/2020/day5/main.rs"

[[bin]]
name = "day6_2020"
path = "src/2020/day6/main.rs"

[[bin]]
name = "day7_2020"
path = "src/2020/day7/main.rs"

[[bin]]
name = "day8_2020"
path = "src/2020/day8/main.rs"

[[bin]]
name = "day9_2020"
path = "src/2020/day9/main.rs"

[[bin]]
name = "day10_2020"
path = "src/2020/day10/main.rs"

[[bin]]
name = "day11_2020"
path = "src/2020/day11/main.rs"

[[bin]]
name = "day12_2020"
path = "src/2020/day12/main.rs"

[[bin]]
name = "day13_2020"
path = "src/2020/day13/main.rs"

[[bin]]
name = "day14_2020"
path = "src/2020/day14/main.rs"

[[bin]]
name = "day15_2020"
path = "src/2020/day15/main.rs"

[[bin]]
name = "day16_2020"
path = "src/2020/day16/main.rs"

[[bin]]
name = "day17_2020"
path = "src/2020/day17/main.rs"

[[bin]]
name = "day18_2020"
path = "src/2020/day18/main.rs"

[[bin]]
name = "day19_2020"
path = "src/2020/day19/main.rs"

[[bin]]
name = "day20_2020"
path = "src/2020/day20/main.rs"

[[bin]]
name = "day21_2020"
path = "src/2020/day21/main.rs"

[[bin]]
name = "day22_2020"
path = "src/2020/day22/main.rs"

[[bin]]
name = "day23_2020"
path = "src/2020/day23/main.rs"

[[bin]]
name = "day24_2020"
path = "src/2020/day24/main.rs"

[[bin]]
name = "day25_2020"
path = "src/2020/day25/main.rs"

# 2021
[[bin]]
name = "day1_2021"
path = "src/2021/day1/main.rs"

[[bin]]
name = "day2_2021"
path = "src/2021/day2/main.rs"

[[bin]]
name = "day4_2021"
path = "src/2021/day4/main.rs"

[[bin]]
name = "day5_2021"
path = "src/2021/day5/main.rs"

[[bin]]
name = "day6_2021"
path = "src/2021/day6/main.rs"

[[bin]]
name = "day7_2021"
path = "src/2021/day7/main.rs"

[[bin]]
name = "day8_2021"
path = "src/2021/day8/main.rs"

[[bin]]
name = "day10_2021"
path = "src/2021/day10/main.rs"

[[bin]]
name = "day3_2021"
path = "src/2021/day3/main.rs"

[[bin]]
name = "day9_2021"
path = "src/2021/day9/main.rs"

[[bin]]
name = "day11_2021"
path = "src/2021/day11/main.rs"

[[bin]]
name = "day12_2021"
path = "src/2021/day12/main.rs"

[[bin]]
name = "day13_2021"
path = "src/2021/day13/main.rs"

[[bin]]
name = "day14_2021"
path = "src/2021/day14/main.rs"

[[bin]]
name = "day15_2021"
path = "src/2021/day15/main.rs"

[[bin]]
name = "day16_2021"
path = "src/2021/day16/main.rs"

[[bin]]
name = "day17_2021"
path = "src/2021/day17/main.rs"

[[bin]]
name = "day18_2021"
path = "src/2021/day18/main.rs"

[[bin]]
name = "day19_2021"
path = "src/2021/day19/main.rs"

[[bin]]
name = "day20_2021"
path = "src/2021/day20/main.rs"

[[bin]]
name = "day21_2021"
path = "src/2021/day21/main.rs"

[[bin]]
name = "day22_2021"
path = "src/2021/day22/main.rs"

[[bin]]
name = "day23_2021"
path = "src/2021/day23/main.rs"

[[bin]]
name = "day24_2021"
path = "src/2021/day24/main.rs"

[[bin]]
name = "day25_2021"
path = "src/2021/day25/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
md5 = "0.7.0"
regex = "1"
lazy_static = "1.4.0"
