[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
description = "My solutions for Advent of Code in Rust"
repository = "https://github.com/SylvainDe/aoc"
readme = "../README.md"
license = "MIT OR Apache-2.0"
keywords = ["aoc", "adventofcode", "advent of code"]
categories = ["games"]

# Common parts
[lib]
name = "common"
path = "src/lib/common.rs"

[[bin]]
name = "template_one_line"
path = "src/templates/template_one_line.rs"

[[bin]]
name = "template_multi_line"
path = "src/templates/template_multi_line.rs"

[[bin]]
name = "template_regex"
path = "src/templates/template_regex.rs"

# 2015
[[bin]]
name = "2015_day1"
path = "src/2015/day1.rs"

[[bin]]
name = "2015_day2"
path = "src/2015/day2.rs"

[[bin]]
name = "2015_day3"
path = "src/2015/day3.rs"

[[bin]]
name = "2015_day4"
path = "src/2015/day4.rs"

[[bin]]
name = "2015_day5"
path = "src/2015/day5.rs"

[[bin]]
name = "2015_day6"
path = "src/2015/day6.rs"

[[bin]]
name = "2015_day7"
path = "src/2015/day7.rs"

[[bin]]
name = "2015_day8"
path = "src/2015/day8.rs"

[[bin]]
name = "2015_day9"
path = "src/2015/day9.rs"

[[bin]]
name = "2015_day10"
path = "src/2015/day10.rs"

[[bin]]
name = "2015_day11"
path = "src/2015/day11.rs"

[[bin]]
name = "2015_day12"
path = "src/2015/day12.rs"

[[bin]]
name = "2015_day13"
path = "src/2015/day13.rs"

[[bin]]
name = "2015_day14"
path = "src/2015/day14.rs"

[[bin]]
name = "2015_day15"
path = "src/2015/day15.rs"

[[bin]]
name = "2015_day16"
path = "src/2015/day16.rs"

[[bin]]
name = "2015_day17"
path = "src/2015/day17.rs"

[[bin]]
name = "2015_day18"
path = "src/2015/day18.rs"

[[bin]]
name = "2015_day19"
path = "src/2015/day19.rs"

[[bin]]
name = "2015_day20"
path = "src/2015/day20.rs"

[[bin]]
name = "2015_day21"
path = "src/2015/day21.rs"

[[bin]]
name = "2015_day22"
path = "src/2015/day22.rs"

[[bin]]
name = "2015_day23"
path = "src/2015/day23.rs"

[[bin]]
name = "2015_day24"
path = "src/2015/day24.rs"

[[bin]]
name = "2015_day25"
path = "src/2015/day25.rs"

# 2016
[[bin]]
name = "2016_day1"
path = "src/2016/day1.rs"

[[bin]]
name = "2016_day2"
path = "src/2016/day2.rs"

[[bin]]
name = "2016_day3"
path = "src/2016/day3.rs"

[[bin]]
name = "2016_day4"
path = "src/2016/day4.rs"

[[bin]]
name = "2016_day5"
path = "src/2016/day5.rs"

[[bin]]
name = "2016_day6"
path = "src/2016/day6.rs"

[[bin]]
name = "2016_day7"
path = "src/2016/day7.rs"

[[bin]]
name = "2016_day8"
path = "src/2016/day8.rs"

[[bin]]
name = "2016_day9"
path = "src/2016/day9.rs"

[[bin]]
name = "2016_day10"
path = "src/2016/day10.rs"

[[bin]]
name = "2016_day11"
path = "src/2016/day11.rs"

[[bin]]
name = "2016_day12"
path = "src/2016/day12.rs"

[[bin]]
name = "2016_day13"
path = "src/2016/day13.rs"

[[bin]]
name = "2016_day14"
path = "src/2016/day14.rs"

[[bin]]
name = "2016_day15"
path = "src/2016/day15.rs"

[[bin]]
name = "2016_day16"
path = "src/2016/day16.rs"

[[bin]]
name = "2016_day17"
path = "src/2016/day17.rs"

[[bin]]
name = "2016_day18"
path = "src/2016/day18.rs"

[[bin]]
name = "2016_day19"
path = "src/2016/day19.rs"

[[bin]]
name = "2016_day20"
path = "src/2016/day20.rs"

[[bin]]
name = "2016_day21"
path = "src/2016/day21.rs"

[[bin]]
name = "2016_day22"
path = "src/2016/day22.rs"

[[bin]]
name = "2016_day23"
path = "src/2016/day23.rs"

[[bin]]
name = "2016_day24"
path = "src/2016/day24.rs"

[[bin]]
name = "2016_day25"
path = "src/2016/day25.rs"

# 2017
[[bin]]
name = "2017_day1"
path = "src/2017/day1.rs"

[[bin]]
name = "2017_day2"
path = "src/2017/day2.rs"

[[bin]]
name = "2017_day3"
path = "src/2017/day3.rs"

[[bin]]
name = "2017_day4"
path = "src/2017/day4.rs"

[[bin]]
name = "2017_day5"
path = "src/2017/day5.rs"

[[bin]]
name = "2017_day6"
path = "src/2017/day6.rs"

[[bin]]
name = "2017_day7"
path = "src/2017/day7.rs"

[[bin]]
name = "2017_day8"
path = "src/2017/day8.rs"

[[bin]]
name = "2017_day9"
path = "src/2017/day9.rs"

[[bin]]
name = "2017_day10"
path = "src/2017/day10.rs"

[[bin]]
name = "2017_day11"
path = "src/2017/day11.rs"

[[bin]]
name = "2017_day12"
path = "src/2017/day12.rs"

[[bin]]
name = "2017_day13"
path = "src/2017/day13.rs"

[[bin]]
name = "2017_day14"
path = "src/2017/day14.rs"

[[bin]]
name = "2017_day15"
path = "src/2017/day15.rs"

[[bin]]
name = "2017_day16"
path = "src/2017/day16.rs"

[[bin]]
name = "2017_day17"
path = "src/2017/day17.rs"

[[bin]]
name = "2017_day18"
path = "src/2017/day18.rs"

[[bin]]
name = "2017_day19"
path = "src/2017/day19.rs"

[[bin]]
name = "2017_day20"
path = "src/2017/day20.rs"

[[bin]]
name = "2017_day21"
path = "src/2017/day21.rs"

[[bin]]
name = "2017_day22"
path = "src/2017/day22.rs"

[[bin]]
name = "2017_day23"
path = "src/2017/day23.rs"

[[bin]]
name = "2017_day24"
path = "src/2017/day24.rs"

[[bin]]
name = "2017_day25"
path = "src/2017/day25.rs"

# 2018
[[bin]]
name = "2018_day1"
path = "src/2018/day1.rs"

[[bin]]
name = "2018_day2"
path = "src/2018/day2.rs"

[[bin]]
name = "2018_day3"
path = "src/2018/day3.rs"

[[bin]]
name = "2018_day4"
path = "src/2018/day4.rs"

[[bin]]
name = "2018_day5"
path = "src/2018/day5.rs"

[[bin]]
name = "2018_day6"
path = "src/2018/day6.rs"

[[bin]]
name = "2018_day7"
path = "src/2018/day7.rs"

[[bin]]
name = "2018_day8"
path = "src/2018/day8.rs"

[[bin]]
name = "2018_day9"
path = "src/2018/day9.rs"

[[bin]]
name = "2018_day10"
path = "src/2018/day10.rs"

[[bin]]
name = "2018_day11"
path = "src/2018/day11.rs"

[[bin]]
name = "2018_day12"
path = "src/2018/day12.rs"

[[bin]]
name = "2018_day13"
path = "src/2018/day13.rs"

[[bin]]
name = "2018_day14"
path = "src/2018/day14.rs"

[[bin]]
name = "2018_day15"
path = "src/2018/day15.rs"

[[bin]]
name = "2018_day16"
path = "src/2018/day16.rs"

[[bin]]
name = "2018_day17"
path = "src/2018/day17.rs"

[[bin]]
name = "2018_day18"
path = "src/2018/day18.rs"

[[bin]]
name = "2018_day19"
path = "src/2018/day19.rs"

[[bin]]
name = "2018_day20"
path = "src/2018/day20.rs"

[[bin]]
name = "2018_day21"
path = "src/2018/day21.rs"

[[bin]]
name = "2018_day22"
path = "src/2018/day22.rs"

[[bin]]
name = "2018_day23"
path = "src/2018/day23.rs"

[[bin]]
name = "2018_day24"
path = "src/2018/day24.rs"

[[bin]]
name = "2018_day25"
path = "src/2018/day25.rs"

# 2019
[[bin]]
name = "2019_day1"
path = "src/2019/day1.rs"

[[bin]]
name = "2019_day2"
path = "src/2019/day2.rs"

[[bin]]
name = "2019_day3"
path = "src/2019/day3.rs"

[[bin]]
name = "2019_day4"
path = "src/2019/day4.rs"

[[bin]]
name = "2019_day5"
path = "src/2019/day5.rs"

[[bin]]
name = "2019_day6"
path = "src/2019/day6.rs"

[[bin]]
name = "2019_day7"
path = "src/2019/day7.rs"

[[bin]]
name = "2019_day8"
path = "src/2019/day8.rs"

[[bin]]
name = "2019_day9"
path = "src/2019/day9.rs"

[[bin]]
name = "2019_day10"
path = "src/2019/day10.rs"

[[bin]]
name = "2019_day11"
path = "src/2019/day11.rs"

[[bin]]
name = "2019_day12"
path = "src/2019/day12.rs"

[[bin]]
name = "2019_day13"
path = "src/2019/day13.rs"

[[bin]]
name = "2019_day14"
path = "src/2019/day14.rs"

[[bin]]
name = "2019_day15"
path = "src/2019/day15.rs"

[[bin]]
name = "2019_day16"
path = "src/2019/day16.rs"

[[bin]]
name = "2019_day17"
path = "src/2019/day17.rs"

[[bin]]
name = "2019_day18"
path = "src/2019/day18.rs"

[[bin]]
name = "2019_day19"
path = "src/2019/day19.rs"

[[bin]]
name = "2019_day20"
path = "src/2019/day20.rs"

[[bin]]
name = "2019_day21"
path = "src/2019/day21.rs"

[[bin]]
name = "2019_day22"
path = "src/2019/day22.rs"

[[bin]]
name = "2019_day23"
path = "src/2019/day23.rs"

[[bin]]
name = "2019_day24"
path = "src/2019/day24.rs"

[[bin]]
name = "2019_day25"
path = "src/2019/day25.rs"

# 2020
[[bin]]
name = "2020_day1"
path = "src/2020/day1.rs"

[[bin]]
name = "2020_day2"
path = "src/2020/day2.rs"

[[bin]]
name = "2020_day3"
path = "src/2020/day3.rs"

[[bin]]
name = "2020_day4"
path = "src/2020/day4.rs"

[[bin]]
name = "2020_day5"
path = "src/2020/day5.rs"

[[bin]]
name = "2020_day6"
path = "src/2020/day6.rs"

[[bin]]
name = "2020_day7"
path = "src/2020/day7.rs"

[[bin]]
name = "2020_day8"
path = "src/2020/day8.rs"

[[bin]]
name = "2020_day9"
path = "src/2020/day9.rs"

[[bin]]
name = "2020_day10"
path = "src/2020/day10.rs"

[[bin]]
name = "2020_day11"
path = "src/2020/day11.rs"

[[bin]]
name = "2020_day12"
path = "src/2020/day12.rs"

[[bin]]
name = "2020_day13"
path = "src/2020/day13.rs"

[[bin]]
name = "2020_day14"
path = "src/2020/day14.rs"

[[bin]]
name = "2020_day15"
path = "src/2020/day15.rs"

[[bin]]
name = "2020_day16"
path = "src/2020/day16.rs"

[[bin]]
name = "2020_day17"
path = "src/2020/day17.rs"

[[bin]]
name = "2020_day18"
path = "src/2020/day18.rs"

[[bin]]
name = "2020_day19"
path = "src/2020/day19.rs"

[[bin]]
name = "2020_day20"
path = "src/2020/day20.rs"

[[bin]]
name = "2020_day21"
path = "src/2020/day21.rs"

[[bin]]
name = "2020_day22"
path = "src/2020/day22.rs"

[[bin]]
name = "2020_day23"
path = "src/2020/day23.rs"

[[bin]]
name = "2020_day24"
path = "src/2020/day24.rs"

[[bin]]
name = "2020_day25"
path = "src/2020/day25.rs"

# 2021
[[bin]]
name = "2021_day1"
path = "src/2021/day1.rs"

[[bin]]
name = "2021_day2"
path = "src/2021/day2.rs"

[[bin]]
name = "2021_day4"
path = "src/2021/day4.rs"

[[bin]]
name = "2021_day5"
path = "src/2021/day5.rs"

[[bin]]
name = "2021_day6"
path = "src/2021/day6.rs"

[[bin]]
name = "2021_day7"
path = "src/2021/day7.rs"

[[bin]]
name = "2021_day8"
path = "src/2021/day8.rs"

[[bin]]
name = "2021_day10"
path = "src/2021/day10.rs"

[[bin]]
name = "2021_day3"
path = "src/2021/day3.rs"

[[bin]]
name = "2021_day9"
path = "src/2021/day9.rs"

[[bin]]
name = "2021_day11"
path = "src/2021/day11.rs"

[[bin]]
name = "2021_day12"
path = "src/2021/day12.rs"

[[bin]]
name = "2021_day13"
path = "src/2021/day13.rs"

[[bin]]
name = "2021_day14"
path = "src/2021/day14.rs"

[[bin]]
name = "2021_day15"
path = "src/2021/day15.rs"

[[bin]]
name = "2021_day16"
path = "src/2021/day16.rs"

[[bin]]
name = "2021_day17"
path = "src/2021/day17.rs"

[[bin]]
name = "2021_day18"
path = "src/2021/day18.rs"

[[bin]]
name = "2021_day19"
path = "src/2021/day19.rs"

[[bin]]
name = "2021_day20"
path = "src/2021/day20.rs"

[[bin]]
name = "2021_day21"
path = "src/2021/day21.rs"

[[bin]]
name = "2021_day22"
path = "src/2021/day22.rs"

[[bin]]
name = "2021_day23"
path = "src/2021/day23.rs"

[[bin]]
name = "2021_day24"
path = "src/2021/day24.rs"

[[bin]]
name = "2021_day25"
path = "src/2021/day25.rs"

[[bin]]
name = "2022_day1"
path = "src/2022/day1.rs"

[[bin]]
name = "2022_day2"
path = "src/2022/day2.rs"

[[bin]]
name = "2022_day3"
path = "src/2022/day3.rs"

[[bin]]
name = "2022_day4"
path = "src/2022/day4.rs"

[[bin]]
name = "2022_day5"
path = "src/2022/day5.rs"

[[bin]]
name = "2022_day6"
path = "src/2022/day6.rs"

[[bin]]
name = "2022_day7"
path = "src/2022/day7.rs"

[[bin]]
name = "2022_day8"
path = "src/2022/day8.rs"

[[bin]]
name = "2022_day9"
path = "src/2022/day9.rs"

[[bin]]
name = "2022_day10"
path = "src/2022/day10.rs"

[[bin]]
name = "2022_day11"
path = "src/2022/day11.rs"

[[bin]]
name = "2022_day12"
path = "src/2022/day12.rs"

[[bin]]
name = "2022_day13"
path = "src/2022/day13.rs"

[[bin]]
name = "2022_day14"
path = "src/2022/day14.rs"

[[bin]]
name = "2022_day15"
path = "src/2022/day15.rs"

[[bin]]
name = "2022_day16"
path = "src/2022/day16.rs"

[[bin]]
name = "2022_day17"
path = "src/2022/day17.rs"

[[bin]]
name = "2022_day18"
path = "src/2022/day18.rs"

[[bin]]
name = "2022_day19"
path = "src/2022/day19.rs"

[[bin]]
name = "2022_day20"
path = "src/2022/day20.rs"

[[bin]]
name = "2022_day21"
path = "src/2022/day21.rs"

[[bin]]
name = "2022_day22"
path = "src/2022/day22.rs"

[[bin]]
name = "2022_day23"
path = "src/2022/day23.rs"

[[bin]]
name = "2022_day24"
path = "src/2022/day24.rs"

[[bin]]
name = "2022_day25"
path = "src/2022/day25.rs"

[[bin]]
name = "2023_day1"
path = "src/2023/day1.rs"

[[bin]]
name = "2023_day2"
path = "src/2023/day2.rs"

[[bin]]
name = "2023_day3"
path = "src/2023/day3.rs"

[[bin]]
name = "2023_day4"
path = "src/2023/day4.rs"

[[bin]]
name = "2023_day5"
path = "src/2023/day5.rs"

[[bin]]
name = "2023_day6"
path = "src/2023/day6.rs"

[[bin]]
name = "2023_day7"
path = "src/2023/day7.rs"

[[bin]]
name = "2023_day8"
path = "src/2023/day8.rs"

[[bin]]
name = "2023_day9"
path = "src/2023/day9.rs"

[[bin]]
name = "2023_day10"
path = "src/2023/day10.rs"

[[bin]]
name = "2023_day11"
path = "src/2023/day11.rs"

[[bin]]
name = "2023_day12"
path = "src/2023/day12.rs"

[[bin]]
name = "2023_day13"
path = "src/2023/day13.rs"

[[bin]]
name = "2023_day14"
path = "src/2023/day14.rs"

[[bin]]
name = "2023_day15"
path = "src/2023/day15.rs"

[[bin]]
name = "2023_day16"
path = "src/2023/day16.rs"

[[bin]]
name = "2023_day17"
path = "src/2023/day17.rs"

[[bin]]
name = "2023_day18"
path = "src/2023/day18.rs"

[[bin]]
name = "2023_day19"
path = "src/2023/day19.rs"

[[bin]]
name = "2023_day20"
path = "src/2023/day20.rs"

[[bin]]
name = "2023_day21"
path = "src/2023/day21.rs"

[[bin]]
name = "2023_day22"
path = "src/2023/day22.rs"

[[bin]]
name = "2023_day23"
path = "src/2023/day23.rs"

[[bin]]
name = "2023_day24"
path = "src/2023/day24.rs"

[[bin]]
name = "2023_day25"
path = "src/2023/day25.rs"

[[bin]]
name = "2024_day1"
path = "src/2024/day1.rs"

[[bin]]
name = "2024_day2"
path = "src/2024/day2.rs"

[[bin]]
name = "2024_day3"
path = "src/2024/day3.rs"

[[bin]]
name = "2024_day4"
path = "src/2024/day4.rs"

[[bin]]
name = "2024_day5"
path = "src/2024/day5.rs"

[[bin]]
name = "2024_day6"
path = "src/2024/day6.rs"

[[bin]]
name = "2024_day7"
path = "src/2024/day7.rs"

[[bin]]
name = "2024_day8"
path = "src/2024/day8.rs"

[[bin]]
name = "2024_day9"
path = "src/2024/day9.rs"

[[bin]]
name = "2024_day10"
path = "src/2024/day10.rs"

[[bin]]
name = "2024_day11"
path = "src/2024/day11.rs"

[[bin]]
name = "2024_day12"
path = "src/2024/day12.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
md5 = "0.7.0"
regex = "1"
lazy_static = "1.4.0"
